--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,32 @@
             <p class="date">Carregant...</p>
         </header>
 
-       
+        <section class="stats-grid">
+            <div class="card stat-card">
+                <h3>Total</h3>
+                <p class="number" id="statTotal">-</p>
+            </div>
+            
+            <div class="card stat-card">
+                <h3>Mitjana/dia (Últims 30d)</h3>
+                <p class="number" id="statAvg30">-</p>
+            </div>
+
+            <div class="card stat-card">
+                <h3>Mitjana/dia (Últims 365d)</h3>
+                <p class="number" id="statAvg365">-</p>
+            </div>
+
+            <div class="card stat-card">
+                <h3>Mitjana/dia (Sempre)</h3>
+                <p class="number" id="statAvgEver">-</p>
+            </div>
+
+            <div class="card stat-card">
+                <h3>Hora Pic (30d)</h3>
+                <p class="number" id="statPeakHour">-</p>
+            </div>
+        </section>
 
         <section class="card chart-section">
             <div class="chart-header">
