--- a/templates/register.html
+++ b/templates/register.html
@@ -105,5 +105,9 @@
         </form>
     </main>
 
+    <footer class="page-footer">
+        <p>2026 Roc Rodriguez</p>
+    </footer>
+
 </body>
 </html>
