--- a/templates/login.html
+++ b/templates/login.html
@@ -57,5 +57,9 @@
         </form>
     </main>
 
+    <footer class="page-footer">
+        <p>2026 Roc Rodriguez</p>
+    </footer>
+
 </body>
 </html>
