--- a/templates/home.html
+++ b/templates/home.html
@@ -48,6 +48,11 @@
 
         <section class="stats-grid">
             <div class="card stat-card">
+                <h3>Última Entrada</h3>
+                <p class="number" id="lastEntryDate">{{ last_entry_date if last_entry_date else '-' }}</p>
+            </div>
+
+            <div class="card stat-card">
                 <h3>Total</h3>
                 <p class="number" id="statTotal">-</p>
             </div>
