--- a/templates/poop.html
+++ b/templates/poop.html
@@ -14,7 +14,7 @@
             <a href="/private/user" class="nav-link">Privacitat</a>
             <a href="/" class="nav-link">Inici</a>
         </div>
-        <a href="{{ url_for('logout') }}" class="btn-logout">Tanca Sessió</a>
+        <a href="{{ url_for('auth.logout') }}" class="btn-logout">Tanca Sessió</a>
     </nav>
 
     <main class="main-container">
