--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
             <a href="/private/user" class="nav-link">Privacitat</a>
             <a href="/" class="nav-link active">Inici</a>
         </div>
-        <a href="{{ url_for('logout') }}" class="btn-logout">Tanca Sessió</a>
+        <a href="{{ url_for('auth.logout') }}" class="btn-logout">Tanca Sessió</a>
     </nav>
     {% else %}
     <nav class="top-nav">
