--- a/templates/user.html
+++ b/templates/user.html
@@ -13,7 +13,7 @@
             <a href="/private/user" class="nav-link active">Privacitat</a>
             <a href="/" class="nav-link">Inici</a>
         </div>
-        <a href="{{ url_for('logout') }}" class="btn-logout">Tanca Sessió</a>
+        <a href="{{ url_for('auth.logout') }}" class="btn-logout">Tanca Sessió</a>
     </nav>
 
     <main class="main-container">
