--- a/templates/poop.html
+++ b/templates/poop.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Registre d'Activitat</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='ico.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/poop.css') }}">
 </head>
 <body>
@@ -20,7 +21,7 @@
     <main class="main-container">
         
         <header class="page-header">
-            <h1>Registre</h1>
+            <h1>Hola, {{ user.username }}!</h1>
             <p>Registra la teva activitat</p>
         </header>
 
