--- a/templates/user.html
+++ b/templates/user.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Configuració de l'Usuari</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='ico.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/user.css') }}">
 </head>
 <body>
